# lane-detection-student

./: .gitignore  EVALUATE_MODEL.md  KALMAN_FILTER_README.md  LANENETPLUS_README.md  TEST_KALMAN_GUIDE.md  TRAIN_TUSIMPLE.md  encoder_features.npz  eval.py  eval_best_model.sh  eval_culane.py  eval_model.py  eval_tusimple.py  extract_encoder_features.py  main.py  prepare_and_train_tusimple.sh  prepare_tusimple_training.sh  pyproject.toml  test.py  test_sequence.py  train.py  train_tusimple.sh  visualize_aug.py
best_accuracy_results/: accuracy_results.csv
culane_eval_results/: accuracy_results.csv
dataloader/: data_loaders.py  sequence_dataset.py
log/: training_log.csv
log/tusimple_lanenet/: eval_results_val.csv  training_log.csv
log/tusimple_lanenet_plus/: eval_results_val.csv  training_log.csv
model/: eval_function.py
model/lanenet/: LaneNet.py  LaneNetPlus.py  attention.py  loss.py  multitask_lanenet.py  train_lanenet.py  train_lanenet_plus.py
model/lanenet/backbone/: temporal_conv_lstm.py
model/lanenet/dataset/: __init__.py  augmentations.py
model/utils/: cli_helper.py  cli_helper_eval.py  cli_helper_test.py  coord_conv.py  kalman_filter.py  kalman_fusion.py
preprocess/: __init__.py  homography_rectification.py  rectify_dataset.py
worst_accuracy_results/: accuracy_results.csv
